--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/myimage.png" alt="Srinath N S S" width="80" >
+          <img src="./assets/images/Srinath_transparent.png" alt="Srinath N S S" width="80" >
         </figure>
 
         <div class="info-content">
