--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
             </a>
           </li>
           <li class="social-item">
-            <a href="/assets/files/Updated Resume.pdf" class="social-link" download="Resume">
+            <a href="/assets/files/201CS301_UPDATED_RESUME_BROWN.pdf" class="social-link" download="Resume">
               <ion-icon name="cloud-download-outline"></ion-icon>
             </a>
           </li>
